<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="createRecipeViewModel"
            type="de.psekochbuch.exzellenzkoch.userinterfacelayer.viewmodel.CreateRecipeViewmodel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/imageButton_recipe_image"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    android:layout_marginTop="10dp" />

                <EditText
                    android:id="@+id/editText_recipe_title_create_recipe_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/enter_recipe_title"
                    android:inputType="textPersonName"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="@={createRecipeViewModel.title}" />

                <TextView
                    android:id="@+id/textView_creation_timestamp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:text="" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/preptime"
                        android:textAlignment="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editText_preparing_time_create_recipe_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ems="7"
                        android:hint="@string/enter_preparing_time"
                        android:inputType="number"
                        android:text="@={createRecipeViewModel.prepTime}"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"/>


                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/min"
                        android:layout_marginTop="10dp"
                        android:textAlignment="center"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_cooking_time_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="Backzeit: "
                        android:textAlignment="center"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/editText_cooking_time_create_recipe_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:ems="8"
                        android:hint="@string/enter_cooking_time"
                        android:inputType="number"
                        android:paddingLeft="10dp"

                        android:text="@={createRecipeViewModel.cookingTime}"
                        android:paddingRight="10dp" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/min"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:textAlignment="center"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView_portions_header"
                        android:layout_width="190dp"
                        android:padding="10dp"
                        android:textSize="20sp"
                        android:layout_height="wrap_content"
                        android:text="@string/portions_headline" />

                    <EditText
                        android:id="@+id/editText_portions_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/portion_amount"
                        android:inputType="number"
                        android:padding="10dp"
                        android:layout_marginRight="17dp"
                        android:textSize="20sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <LinearLayout
                        android:layout_width="217dp"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <CheckBox
                            android:id="@+id/checkBox_vegan_create_recipe_fragment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@{createRecipeViewModel.tagCheckBoxVegan}"
                            android:text="@string/vegan" />

                        <CheckBox
                            android:id="@+id/checkBox_vegetarian_create_recipe_fragment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@{createRecipeViewModel.tagCheckBoxVegetarian}"
                            android:text="@string/vegetarian" />

                        <CheckBox
                            android:id="@+id/checkBox_hearty_create_recipe_fragment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:checked="@{createRecipeViewModel.tagCheckBoxSavoury}"
                            android:text="@string/savoury__tag"/>
                        </LinearLayout>

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <CheckBox
                                    android:id="@+id/checkBox_sweet_create_recipe_fragment"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:checked="@{createRecipeViewModel.tagCheckBoxSweet}"
                                    android:text="@string/sweet_tag"
                                    />

                                <CheckBox
                                    android:id="@+id/checkBox_salty_create_recipe_fragment"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:checked="@{createRecipeViewModel.tagCheckBoxSalty}"
                                    android:text="@string/salty_tag"
                                    />

                                <CheckBox
                                    android:id="@+id/checkBox_cheap"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:checked="@{createRecipeViewModel.tagCheckBoxCheap}"
                                    android:text="@string/cheap"
                                   />
                            </LinearLayout>

                    </LinearLayout>

                <EditText
                    android:id="@+id/editText_ingredients_create_recipe_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:hint="@string/ingredient_input_description"
                    android:inputType="textMultiLine"
                    android:text="@={createRecipeViewModel.ingredients}"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

                <EditText
                    android:id="@+id/editText_preparation_description_create_recipe_fragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:ems="10"
                    android:gravity="start|top"
                    android:hint="@string/preparation_description"
                    android:inputType="textMultiLine"
                     android:text="@={createRecipeViewModel.preparation}"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:orientation="horizontal"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <CheckBox
                        android:id="@+id/checkBox_publish_create_recipe_fragment"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{createRecipeViewModel.tagCheckBoxPublish}"
                        android:text="@string/publish" />

                </LinearLayout>

                <Button
                    android:id="@+id/button_create_recipe_and_goto_RecipeList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/save" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</layout>